--- a/index.html
+++ b/index.html
@@ -1,24 +1,40 @@
-<script>
-window.onload = function() {
-  fetch('./puaboos.yaml')
-    .then(response => {
-      if (!response.ok) throw new Error("Failed to load YAML file: " + response.status);
-      return response.text();
-    })
-    .then(yamlText => {
-      const data = jsyaml.load(yamlText);
-      const modulesList = document.getElementById('modules-list');
-      modulesList.innerHTML = '';
+<!DOCTYPE html>
+<html>
+<head>
+  <title>PUABO OS V200</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
+</head>
+<body>
+  <div class="container">
+    <h1>PUABO OS V200</h1>
+    <p>System Modules:</p>
+    <ul id="modules-list">Loading...</ul>
+  </div>
 
-      data.modules.forEach(module => {
-        const li = document.createElement('li');
-        li.textContent = module.name;
-        modulesList.appendChild(li);
-      });
-    })
-    .catch(error => {
-      document.getElementById('modules-list').textContent = "Error loading modules.";
-      console.error("YAML loading error:", error);
-    });
-};
-</script>
+  <script>
+    window.onload = function() {
+      fetch('./puaboos.yaml')
+        .then(response => {
+          if (!response.ok) throw new Error("Failed to load YAML file: " + response.status);
+          return response.text();
+        })
+        .then(yamlText => {
+          const data = jsyaml.load(yamlText);
+          const modulesList = document.getElementById('modules-list');
+          modulesList.innerHTML = '';
+
+          data.modules.forEach(module => {
+            const li = document.createElement('li');
+            li.textContent = module.name;
+            modulesList.appendChild(li);
+          });
+        })
+        .catch(error => {
+          document.getElementById('modules-list').textContent = "Error loading modules.";
+          console.error("YAML loading error:", error);
+        });
+    };
+  </script>
+</body>
+</html>
